[bugfix] Don't overflow on very wide status'es
If someone makes a post with a long, uninterrupted piece of text in a
code snippet, we would stretch the column to fit it, resulting in the
UI going a bit whacky.

By setting min-width: 0% this fixes it, and we now automatically get a
scrollbar on overflow instead.

Fixes: #1952

--- a/web/source/css/profile.css
+++ b/web/source/css/profile.css
@@ -181,6 +181,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.4rem;
+	min-width: 0%;
 
 	.col-header {
 		display: grid;
